# writing3d

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: ExecMoveEE.action  ExecMoveitPlan.action  GetState.action  MoveEE.action  PlanJointSpace.action  PlanMoveEE.action
cfg/: arm_joint_limits.yml  dip_high.yml  dip_in.yml  dip_low.yml  dip_move.yml  dip_retract.yml  gui_config.yml  home_pose_angular.yml  left_clearway.yml  pen.urdf.xacro  retract_joint_pose_brush_small.yml  retract_joint_pose_sharpe.yml  touch_joint_pose_brush_small.yml  touch_joint_pose_no_dip_brush.yml  touch_joint_pose_sharpe.yml  touch_joint_pose_straight_sharpe.yml  writing_angular_pose.yml  writing_ready_pose_angular.yml  writing_touch_pose_angular.yml
launch/: viz_moveit.launch
rviz/: moveit_movo.rviz
src/writing3d/: common.py  cv_util.py  gui.py  kinect.npy  moveit_client.py  moveit_planner.py  movo_pose_publisher.py  pens.py  util.py  vision.py  writer.py
src/writing3d/core/: gui.py  pens.py  writer.py
src/writing3d/experiments/: collect_data  collect_data.py  start_gui.py
src/writing3d/experiments/tasks/: get_ranges.py
src/writing3d/robot/: moveit_client.py  moveit_planner.py  movo_pose_publisher  movo_pose_publisher.py  movo_vision.py
